# uff-relax

./: Cargo.toml  README.md  pe_dist_cell_before_opt.mol2
benches/: large_system.rs  threads_comparison.rs  threshold.rs
examples/: benzene.rs
src/: cell.rs  lib.rs  optimizer.rs  spatial.rs
src/atom/: mod.rs
src/forcefield/: interactions.rs  mod.rs  parallel.rs  sequential.rs
src/params/: mod.rs
tests/: async_optimizer.rs  benchmark_threshold.rs  benzene.rs  cancellation.rs  consistency_check.rs  cyclohexane.rs  electrostatic.rs  large_benchmark.rs  large_system.rs  liquid_benzene.rs  molecules.rs  polyethylene.rs  polyethylene_overlap.rs  random_clash.rs
