[package]
name = "uff-relax"
version = "1.0.6"
edition = "2024"
authors = ["Forblaze Project <forblazeproject@gmail.com>"]
description = "A high-performance, parallelized molecular structure optimizer using the Universal Force Field (UFF)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForblazeProject/uff-relax.git"
keywords = ["chemistry", "molecule", "uff", "geometry", "simulation"]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
glam = { version = "0.31.0", features = ["serde"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
web-time = "1.1"

# Wasm-specific dependencies (optional)
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console", "Window"], optional = true }

[features]
default = []
wasm = ["js-sys", "wasm-bindgen", "wasm-bindgen-futures", "web-sys"]

[dev-dependencies]
rand = "0.8"
futures = "0.3"

[[bench]]
name = "threshold"
harness = false

[[bench]]
name = "large_system_bench"
path = "benches/large_system.rs"
harness = false

[[bench]]
name = "threads_comparison"
path = "benches/threads_comparison.rs"
harness = false

[[bench]]
name = "electrostatic_performance"
path = "benches/electrostatic_performance.rs"
harness = false
